--- a/client/src/components/RecordSearchFilters/RecordSearchFilters.module.css
+++ b/client/src/components/RecordSearchFilters/RecordSearchFilters.module.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  padding-left: 1rem;
   margin-bottom: 1rem;
   gap: 1rem;
 }
